# strategic-gears-cms-site-api

./: .eslintrc  .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
scripts/: check_max_lines.py
strategic_gears_cms_site_api/: __init__.py  hooks.py  modules.txt  sdk.py  utils.py
strategic_gears_cms_site_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
strategic_gears_cms_site_api/api/: V1.py  banner.py
strategic_gears_cms_site_api/api/v1/: about_strategic_gears.py  access_token.py  client.py  color_accounting.py  contact.py  corporate_news.py  home.py  introduction.py  navbar.py  newsletter.py  point_of_difference.py  report.py  report_list.py  seo.py  service_details.py  services.py  team_member.py  utils.py
strategic_gears_cms_site_api/config/: desktop.py  docs.py
strategic_gears_cms_site_api/strategic_gears_cms_site_api/doctype/about_strategic_gears/: about_strategic_gears.js  about_strategic_gears.json  about_strategic_gears.py  test_about_strategic_gears.py
strategic_gears_cms_site_api/strategic_gears_cms_site_api/doctype/achievement_details/: achievement_details.json  achievement_details.py
strategic_gears_cms_site_api/strategic_gears_cms_site_api/doctype/achievements/: achievements.js  achievements.json  achievements.py  test_achievements.py
strategic_gears_cms_site_api/strategic_gears_cms_site_api/doctype/article_details/: article_details.js  article_details.json  article_details.py  test_article_details.py
strategic_gears_cms_site_api/strategic_gears_cms_site_api/doctype/articles/: articles.js  (+3 more)
(+124 files in other folders)
