[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "strategic_gears_cms_site_api"
authors = [{name = "8848 Digital", email = "aarti@8848digital.com"}]
readme = "README.md"
dynamic = ["version", "description"]


[tool.bench.dev-dependencies]
hypothesis = "~=6.31.0"
[tool.black]
line-length = 99
[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"